--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /public/store
 /storage/*.key
 /storage/framework
+storage/logs/
 /storage/debugbar
 /vendor
 .env
@@ -17,4 +18,3 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
-/storage/framework
